merge-upstream: Fix a couple more dark mode issues

--- a/src/addons/settings/settings.css
+++ b/src/addons/settings/settings.css
@@ -25,7 +25,6 @@ body {
 body[theme="dark"] {
     background-color: #222222;
     color: white;
-    color-scheme: dark;
 }
 
 a[href] {
