--- a/src/components/tw-restore-point-modal/restore-point-modal.css
+++ b/src/components/tw-restore-point-modal/restore-point-modal.css
@@ -71,7 +71,7 @@
     gap: 0.5rem;
 }
 .restore-point:hover {
-    border-color: $motion-primary;
+    border-color: $looks-secondary;
 }
 .restore-point-title {
     font-weight: bold;
